--- a/client/login.html
+++ b/client/login.html
@@ -70,8 +70,7 @@
         <!-- end modal -->
     </div>
 
-
-
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src='js/loginManual.component.js'></script>
     <script src='js/facebook.login.js'></script>
